# px4_quadrotor_slam_gz

./: CMakeLists.txt  package.xml  px4_gazebo_sensor.sh  px4_gazebo_sensor_fast_planner.sh  px4_gazebo_sensor_openvins_integration.sh  px4_gazebo_velodyne.sh
launch/: open_vins_px4.launch  px4_gmapping.launch  px4_sensor.launch  px4_sensor_fast_planner.launch  px4_sensor_openvins_integration.launch  px4_velodyne.launch
models/bin_4_dropping_task/: model.config
models/d435_camera_tw/: depth_camera_tw.sdf  model.config
models/depth_camera/: depth_camera.sdf.backup
models/iris_depth_camera/: iris_depth_camera.sdf
models/iris_opt_flow/: iris_opt_flow.sdf
models/iris_rplidar/: iris_depth.sdf  iris_rplidar.sdf  iris_rplidar.sdf.backup  iris_velodyne.sdf
models/iris_vision/: iris_vision.sdf  model.config
models/lidar/: model.sdf
models/matrice_100/: matrice_100.sdf.last_generated
models/plane/: plane.sdf.last_generated
models/realsense_camera/: model.sdf
models/rover/: rover.sdf
models/rplidar/: model.sdf
models/stereo_camera/: model.config  stereo_camera.sdf
models/stereo_camera_tw/: model.config  stereo_camera.sdf
rviz/: darpa_medium.rviz  default.rviz  dwa_jw.rviz  dwa_record.rviz  fast-planner.rviz  gmapping_record.rviz  kdarpa_gplanning.rviz  kdarpa_planning_docs.rviz  openvins_integration.rviz  px4_loam_slam.rviz
src/: map_baselink_broadcaster.cpp
tips/: how_to_setup_kimera.txt  install_all_gazebo_models.sh  px4_handling_tip.txt  setup_px4_ros_gazebo.txt
tips/rplidarA3model/: model.sdf
worlds/: warehouse.world  warehouse.world.simple
(+13 files in other folders)
